# IControlFussi

./: CMakeLists.txt  windows-toolchain.cmake
src/: app_icon.svg.xml  mainwindow.cpp  mainwindow.h  resources.qrc.html
